[tool.poetry]
name = "kaspa-rest-server"
version = "0.0.32"
description = ""
authors = ["lAmeR1 <lamer1@github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.63.0"
grpcio-tools = "^1.63.0"
fastapi = "^0.110.3"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
websockets = "^12.0"
cachetools = "^5.3.3"
aiohttp = "^3.9.5"
aiocache = "^0.12.2"
psycopg2-binary = "^2.9.10"
waitress = "^3.0.0"
starlette = "^0.37.2"
kaspa-script-address = "^0.0.1"
kaspa = "^1.0.0"
greenlet = "^3.2.4"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.42.0"
psycopg = {version = "^3.2.10", extras = ["binary", "pool", "async"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.2"

[tool.ruff]
line-length=120
exclude=[
    "kaspad/rpc_pb2.py",
    "kaspad/rpc_pb2_grpc.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
